welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: not found: value y
	setPos(6,y+1)
                 ^